--- a/index.html
+++ b/index.html
@@ -95,12 +95,16 @@
       
         <p> <br> </p>
         <h5>New and recently updated drafts</h5>
-        <li>
-          <strong><a href="/research/davila_parlatore_walther_probability_pricing.pdf" target="_blank">Probability Pricing</a></strong>, with Cecilia Parlatore and Ansgar Walther, February 2025.
-        </li>
         <li> 
             <strong><a href="/research/barcons_davila_schaab_intergenerational_welfare_assessments.pdf" target="_blank">Intergenerational Welfare Assessments</a></strong>, with Sergi Barcons and Andreas Schaab, January 2025.
           </li>
+        <li>
+          <strong><a href="/research/davila_parlatore_walther_probability_pricing.pdf" target="_blank">Probability Pricing</a></strong>, with Cecilia Parlatore and Ansgar Walther, February 2025.
+        </li>
+                 <li>
+          <strong><a href="/research/drst_optimal_tariffs.pdf" target="_blank">A Dynamic Theory of Optimal Tariffs</a></strong>, with Andrés Rodríguez-Clare, Andreas Schaab, and Stacy Yingqi Tan, May 2025.
+        </li>
+
           <li> 
             <strong><a href="/research/davila_schaab_welfare_accounting.pdf" target="_blank">Welfare Accounting</a></strong>, with Andreas Schaab, January 2025.
           </li>
