--- a/research.html
+++ b/research.html
@@ -204,17 +204,20 @@
 
     <h2 id="working-papers">Working Papers</h2>
     
+      <p><strong><a href="/research/barcons_davila_schaab_intergenerational_welfare_assessments.pdf" target="_blank">Intergenerational Welfare Assessments</a></strong>,
+      with Sergi Barcons and Andreas Schaab, January 2025.</p>
+
     <p><strong><a href="/research/davila_parlatore_walther_probability_pricing.pdf" target="_blank">Probability Pricing</a></strong>,
       with Cecilia Parlatore and Ansgar Walther, February 2025.</p>
 
-    <p><strong><a href="/research/barcons_davila_schaab_intergenerational_welfare_assessments.pdf" target="_blank">Intergenerational Welfare Assessments</a></strong>,
-      with Sergi Barcons and Andreas Schaab, January 2025.</p>
-  
+         <p><strong><a href="/research/drst_optimal_tariffs.pdf" target="_blank">A Dynamic Theory of Optimal Tariffs</a></strong>,
+      with Andrés Rodríguez-Clare, Andreas Schaab, and Stacy Yingqi Tan, May 2025.</p>
+
     <p><strong><a href="/research/davila_schaab_welfare_accounting.pdf" target="_blank">Welfare Accounting</a></strong>,
       with Andreas Schaab, January 2025.</p>
 
     <p><strong><a href="/research/davila_schaab_non_envelope_theorem.pdf" target="_blank">A Non-Envelope Theorem with Linearly Homogeneous Constraints</a></strong>,
-      with Andreas Schaab, October 2024.</p>
+      with Andreas Schaab, March 2025.</p>
 
     <p><strong><a href="/research/davila_fourakis_weymuller_optimal_joint_bond.pdf" target="_blank">Optimal Joint Bond
       Design</a></strong>, with Stelios Fourakis and Charles-Henri Weymuller, April 2024 (substantially revised draft coming soon).</p>
