--- a/teaching.html
+++ b/teaching.html
@@ -62,7 +62,12 @@
 
 <div class="container mt-5">
   <h2 id="discussions">Teaching</h2>
-  <br> 
+  <br>
+    <h4> FTG Summer School 2025</h4> 
+  <a href="teaching/slides_davila_FTG_summer_school_2025.pdf" target="_blank">Slides </a>
+  <br>
+  <br>
+
   <h4>Econ 500a: General Equilibrium and Welfare Economics (Fall 2024)</h4>
 
   This is the second half of the first semester in the Economics PhD first-year micro sequence. <br> 
