--- a/index.html
+++ b/index.html
@@ -95,6 +95,10 @@
       
         <p> <br> </p>
         <h5>New and recently updated drafts</h5>
+        <li>
+               <strong><a href="/research/davila_schaab_time_inconsistency.pdf" target="_blank">Time Inconsistency with Heterogeneous Agents</a></strong>,
+      with Andreas Schaab, June 2025.
+        </li>
         <li> 
             <strong><a href="/research/barcons_davila_schaab_intergenerational_welfare_assessments.pdf" target="_blank">Intergenerational Welfare Assessments</a></strong>, with Sergi Barcons and Andreas Schaab, January 2025.
           </li>
@@ -110,10 +114,7 @@
           </li>
           <li> 
             <strong><a href="/research/davila_walther_corrective.pdf" target="_blank">Corrective Regulation with Imperfect Instruments</a></strong>, with Ansgar Walther, April 2025.
-          </li>
-          <li> 
-            <strong><a href="/research/davila_schaab_non_envelope_theorem.pdf" target="_blank">A Non-Envelope Theorem with Linearly Homogeneous Constraints</a></strong>, with Andreas Schaab, March 2025.
-          </li>
+          </li> 
           <li> 
             <strong><a href="/research/davila_schaab_optimal_mp_hank.pdf" target="_blank">Optimal Monetary Policy with Heterogeneous Agents: Discretion, Commitment, and Timeless Policy</a></strong>, with Andreas Schaab, February 2023.
           </li>
