--- a/research.html
+++ b/research.html
@@ -70,6 +70,7 @@
       Heterogeneous Individuals</a></strong>, with <a href="https://www.andreasschaab.com/">Andreas Schaab</a>.
       <br />
       <em>Journal of Political Economy</em>, Volume 133, Issue 9, September 2025.
+      <strong><a href="https://www.journals.uchicago.edu/doi/10.1086/736211" target="_blank">Link</a></strong> |
       <strong><a href="/research/bibtex/davila_schaab_welfare_assessments.txt" target="_blank">BibTeX</a></strong> |
     <strong><a href="https://dataverse.harvard.edu/dataset.xhtml?persistentId=doi:10.7910/DVN/Y7Z2QF" target="_blank">Code</a></strong>.
   </p>
@@ -85,7 +86,7 @@
     <p><strong><a href="/research/davila_graves_parlatore_value_arbitrage.pdf" target="_blank">The Value of
       Arbitrage</a></strong>, with <a href="https://sites.google.com/view/daniel-graves/">Daniel Graves</a> and <a href="http://ceciliaparlatore.com/">Cecilia Parlatore</a>.
       <br />
-      <em>Journal of Political Economy</em>, Volume 114, Issue 6, June 2024, Pages 1947-1993.
+      <em>Journal of Political Economy</em>, Volume 132, Issue 6, June 2024, Pages 1947-1993.
           <strong><a href="https://www.journals.uchicago.edu/doi/10.1086/728453" target="_blank">Link</a></strong> |
           <strong><a href="/research/bibtex/davila_graves_parlatore_arbitrage.txt" target="_blank">BibTeX</a></strong>.
     </p>
@@ -204,6 +205,9 @@
 
     <h2 id="working-papers">Working Papers</h2>
     
+     <p><strong><a href="/research/davila_schaab_time_inconsistency.pdf" target="_blank">Time Inconsistency with Heterogeneous Agents</a></strong>,
+      with Andreas Schaab, June 2025.</p>
+
       <p><strong><a href="/research/barcons_davila_schaab_intergenerational_welfare_assessments.pdf" target="_blank">Intergenerational Welfare Assessments</a></strong>,
       with Sergi Barcons and Andreas Schaab, January 2025.</p>
 
@@ -219,8 +223,8 @@
     <p><strong><a href="/research/davila_schaab_non_envelope_theorem.pdf" target="_blank">A Non-Envelope Theorem with Linearly Homogeneous Constraints</a></strong>,
       with Andreas Schaab, March 2025.</p>
 
-    <p><strong><a href="/research/davila_fourakis_weymuller_optimal_joint_bond.pdf" target="_blank">Optimal Joint Bond
-      Design</a></strong>, with Stelios Fourakis and Charles-Henri Weymuller, April 2024 (substantially revised draft coming soon).</p>
+    <p><strong><a href="/research/davila_weymuller_optimal_joint_bond.pdf" target="_blank">Optimal Joint Bond
+      Design</a></strong>, with Stelios Fourakis and Charles-Henri Weymuller, September 2017 (substantially revised draft coming soon).</p>
 
     <p><strong><a href="/research/davila_philippon_inc_shocks.pdf" target="_blank">Incompleteness Shocks</a></strong>,
             with Thomas Philippon, December 2017 (substantially revised draft coming soon).</p>
