--- a/research.html
+++ b/research.html
@@ -220,8 +220,6 @@
     <p><strong><a href="/research/davila_schaab_welfare_accounting.pdf" target="_blank">Welfare Accounting</a></strong>,
       with Andreas Schaab, January 2025.</p>
 
-    <p><strong><a href="/research/davila_schaab_non_envelope_theorem.pdf" target="_blank">A Non-Envelope Theorem with Linearly Homogeneous Constraints</a></strong>,
-      with Andreas Schaab, March 2025.</p>
 
     <p><strong><a href="/research/davila_weymuller_optimal_joint_bond.pdf" target="_blank">Optimal Joint Bond
       Design</a></strong>, with Stelios Fourakis and Charles-Henri Weymuller, September 2017 (substantially revised draft coming soon).</p>
@@ -229,8 +227,11 @@
     <p><strong><a href="/research/davila_philippon_inc_shocks.pdf" target="_blank">Incompleteness Shocks</a></strong>,
             with Thomas Philippon, December 2017 (substantially revised draft coming soon).</p>
 
-    <h2 id="inactive-working-papers">Inactive Working Papers</h2>
+    <h2 id="inactive-working-papers">Notes/Inactive Papers</h2>
 
+    <p><strong><a href="/research/davila_schaab_non_envelope_theorem.pdf" target="_blank">A Non-Envelope Theorem with Linearly Homogeneous Constraints</a></strong>,
+      with Andreas Schaab, March 2025.</p>
+    
     <p><strong><a href="/research/davila_cumulant.pdf" target="_blank">Myopic Portfolio Choice with Higher
           Cumulants</a></strong>, January 2011. </p>
 
