--- a/discussions.html
+++ b/discussions.html
@@ -66,6 +66,13 @@
   <div class="container mt-5">
     <h2 id="discussions">Discussions</h2>
 
+    <h4> 2025 </h4>
+    
+    <p><strong>The Economics of Network-Based Deposit Insurance?, <a
+      href="discussions/davila_discussion_kkp.pdf" target="_blank">SLIDES</a></strong><br />
+    by Edward T. Kim, Shohini Kundu, and Amiyatosh Purnanandam <br />
+    NBER Market Frictions and Financial Risks Meeting, 2025</p>
+
     <h4> 2024 </h4>
     
     <p><strong>Bankruptcy Exemption of Repo Markets: Too Much Today for Too Little Tomorrow?, <a
