--- a/discussions.html
+++ b/discussions.html
@@ -66,6 +66,13 @@
   <div class="container mt-5">
     <h2 id="discussions">Discussions</h2>
 
+    <h4> 2026 </h4>
+    
+    <p><strong>Household Portfolio and Deposit Insurance: Implications for the Supply of Safe Assets, <a
+      href="discussions/davila_discussion_glv.pdf" target="_blank">SLIDES</a></strong><br />
+    by Pulak Ghosh, Nicola Limodio, Nishant Vats <br />
+    AFA Meetings, 2026</p>
+
     <h4> 2025 </h4>
     
     <p><strong>The Economics of Network-Based Deposit Insurance?, <a
